--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@
 }
 
 body {
+    background-image: linear-gradient( 109.6deg,  rgba(44,83,131,1) 18.9%, rgba(95,175,201,1) 91.1% );  
   font-family: 'Muli', sans-serif;
   display: flex;
   align-items: center;
